tests/fixtures/negative/style/ReturnCount.kt
package style

fun classify(x: Int): String {
    if (x < 0) return "negative"
    return "non-negative"
}
